Fix scrollbar and window.location.origin calls to work with Firefox

--- a/web/gnome/webgnome/webgnome/static/css/model.css
+++ b/web/gnome/webgnome/webgnome/static/css/model.css
@@ -53,7 +53,7 @@ ul.dynatree-container {
 }
 
 #tree {
-    overflow: scroll;
+    /*overflow: scroll;*/
     max-height: 100%;
 }
 
